# portofolioferafinal

./: .env  .gitignore  DB_682024074_FERA.sql  app.py  models.py  pyproject.toml  requirements.txt
routes/: admin.py  api.py  auth.py  public.py
services/: cloudinary_service.py  resend_service.py
static/css/: auth.css  style.css
static/js/: script.js
templates/: index.html  login.html
templates/admin/: about.html  base.html  dashboard.html  experience_form.html  experiences.html  forgot_password.html  messages.html  project_form.html  projects.html  register.html  reset_password.html  skill_form.html  skills.html
