[project]
name = "portofoliofera"
version = "0.1.0"
description = "Portfolio Flask app"
requires-python = ">=3.12"
dependencies = [
    "Flask",
    "python-dotenv",
    "Flask-SQLAlchemy",
    "Flask-Login",
    "PyMySQL",
    "Werkzeug",
    "Flask-Bcrypt",
    "resend",
    "email-validator",
    "cryptography"
]

[tool.vercel]
entrypoint = "app:app"