[project]
name = "portofoliofera"
version = "0.1.0"
description = "Portfolio Flask app"
requires-python = ">=3.12"
dependencies = [
    "Flask",
    "python-dotenv",
    "Flask-SQLAlchemy",
    "Flask-Login",
    "PyMySQL",
    "Werkzeug",
    "resend",
    "cryptography",
    "email-validator",
    "Flask-Bcrypt"
]

[tool.vercel]
entrypoint = "app:app"